--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-modal": "^3.13.1",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.1.2",
+    "string-to-color": "^2.2.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
